--- a/reports.html
+++ b/reports.html
@@ -32,9 +32,9 @@
          PAY.GOV FORMS (LOADED AS MODULES)
          ======================================================= -->
 
-    <div data-include="forms/5110-40.html"></div>
-    <div data-include="forms/5110-28.html"></div>
-    <div data-include="forms/5110-11.html"></div>
+    <div data-include="5110-40.html"></div>
+    <div data-include="5110-28.html"></div>
+    <div data-include="5110-11.html"></div>
 
   </main>
 
