--- a/reports.html
+++ b/reports.html
@@ -23,9 +23,15 @@
 
       <!-- Filing month banner -->
       <div class="month-banner">
-        Filing Month:
-        <span id="filingMonthLabel">Loading…</span>
-      </div>
+  <span class="label">Filing Month:</span>
+
+  <select id="filingMonthSelect" class="month-select">
+    <option>Loading…</option>
+  </select>
+
+  <span id="filingMonthStatus" class="month-status"></span>
+</div>
+
     </header>
 
     <!-- =======================================================
